--- a/action.yml
+++ b/action.yml
@@ -1,6 +1,6 @@
 name: 'ioBroker Testing: check and lint'
 author: 'AlCalzone'
-#description: 'Greet someone'
+description: 'Perform type checking, linting and testing of an ioBroker adapter package'
 
 inputs:
   node-version:
@@ -24,15 +24,18 @@ inputs:
   lint-command: 
     description: 'Overwrite the default lint command'
     default: 'npm run lint'
+  test-command:
+    description: 'Overwrite the default test command'
+    default: 'npm run test:package' 
 
 runs:
   using: "composite"
   steps:
     - name: Checkout code
-      uses: actions/checkout@v3
+      uses: actions/checkout@v4
 
     - name: Use Node.js ${{ inputs.node-version }}
-      uses: actions/setup-node@v3
+      uses: actions/setup-node@v4
       with:
         node-version: ${{ inputs.node-version }}
         cache: ${{ (inputs.package-cache != 'false' && inputs.package-cache != '') && inputs.package-cache || '' }}
@@ -61,4 +64,4 @@ runs:
 
     - name: Test package files
       shell: bash
-      run: npm run test:package
+      run: "${{ inputs.test-command }}"
